viz/src/App.css
.App {
  text-align: center;
  background-color: white;
  height: 200vh;
}

.App-header {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(100px + 2vmin);
  height: 20vh;
  color: white;
  background-color: lightslategray;
}

.title {
  color: rgb(20, 20, 20);
}
.title2 {
  color: white;
}

#bar.container {
  display: flex;
  flex-direction: column;
  height: 80vh;
  background-color: lightblue;
}

#light.container {
  display: flex;
  flex-direction: column;
  height: 100vh;
  background-color: lightblue;
}

#dark.container {
  display: flex;
  flex-direction: column;
  height: 100vh;
  background-color: rgb(50, 95, 110);
}
.ui.bar.segment {
  margin-top: 2%;
  margin-left: 10%;
  width: 80%;
  height: 80%;
}

.ui.line.segment {
  margin-top: 2%;
  margin-left: 5%;
  width: 55%;
  height: 80%;
}

.panel {
  display: flex;
  flex-direction: column;
  margin-top: 2%;
  margin-left: 5%;
  border-radius: 4px;
  background-color: silver;
  color: black;
  height: 40%;
  width: 25%;
}

.row {
  display: flex;
  flex-direction: row;
}

.ui.labeled.input {
  margin: 5px;
}

.ui.dividing.header {
  margin: 4px;
  margin-bottom: 15px;
  background-color: rgba(88, 176, 202, 0.5);
  color: white;
}

#go {
  width: 50%;
  margin: auto;
  background-color: black;
  color: cyan;
}
#go:hover {
  color: lightgreen;
}

input {
  border-radius: 4px;
  font-family: serif;
  margin: 2px;
}

